gcc/testsuite/rust/rustc/ui/missing/missing-items/missing-type-parameter.rs
fn foo<X>() { }

fn main() {
    foo(); // { dg-error ".E0282." "" { target *-*-* } }
}

